kubernetes/apps/media/altmount/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: altmount-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: AltMount
    gethomepage.dev/pod-selector: app.kubernetes.io/name=altmount
    gethomepage.dev/icon: mdi-folder-sync-outline
spec:
  hostnames:
    - altmount.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: altmount
          port: 8080
